PLANET-6828 Fix Covers carousel layout in Safari
By hiding some of the covers we make sure that they are updated in Safari too, but we lose the smooth scrolling effect

--- a/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
+++ b/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
@@ -9,7 +9,6 @@
     overflow-x: scroll;
     flex-wrap: nowrap;
     scrollbar-width: none;
-    scroll-behavior: smooth;
 
     .cover {
       margin-bottom: 24px;
